--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
 *.class
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# generated files
+bin/
+gen/
+build/
+*.iml
+.idea
+.DS_Store
+.gradle
+.gradle/
+Thumbs.db
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Local configuration file (sdk path, etc)
+local.properties
